added first section of the webpage

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Year New Me</title>
   <link rel="stylesheet" href="styles/style.css">
+
   <!-- Work Sans Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome kit -->
+  <script src="https://kit.fontawesome.com/65aaa9a582.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -17,7 +21,7 @@
       <div>
         <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
         <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita amet nobis voluptatem commodi facilis consectetur accusamus corporis. Earum, fugiat dolores.</p>
-        <p class="btn-contact">
+        <p id="btn-contact">
           <input type="button" value="Contact Us" class="btn-primary"/>
         </p>
       </div>
@@ -26,7 +30,29 @@
 
   <!-- This is main section -->
   <main>
+  
+  <!-- This is section one -->
+    <section>
+      <div class="section-container">
+        <img src="images/person.png" alt="Person Image">
+        <div class="section-item">
+          <h3 class="section-title">My failures of previous year</h3>
+        <p class="section-sub">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, fuga soluta veniam facere, magni sunt, deserunt sint dolorem quo adipisci vel mollitia. Aliquid, iure laudantium!</p>
+        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Lorem ipsum dolor sit amet.</p>
+        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Pariatur sapiente quia ipsum dolores.</p>
+        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Falis quibusdam desunt pedis accum.</p>
+        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Excabo minima exerconem aut voate.</p>
+        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Aliquam dolorum neque aperiam eius.</p>
+        </div>
+      </div>
+    </section>
+
+  <!-- This is section two -->
+  <section>
+    
+  </section>
 
   </main>
+
 </body>
 </html>
