--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section>
       <div class="section-container">
         <img src="images/person.png" alt="Person Image">
-        <div class="section-item">
-          <h3 class="section-title">My failures of previous year</h3>
+        <div class="section-one-item">
+        <h3 class="section-title">My failures of previous year</h3>
         <p class="section-sub">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, fuga soluta veniam facere, magni sunt, deserunt sint dolorem quo adipisci vel mollitia. Aliquid, iure laudantium!</p>
         <p class="section-description"><i class="fa-solid fa-circle-check"></i> Lorem ipsum dolor sit amet.</p>
         <p class="section-description"><i class="fa-solid fa-circle-check"></i> Pariatur sapiente quia ipsum dolores.</p>
@@ -48,10 +48,38 @@
     </section>
 
   <!-- This is section two -->
-  <section>
-    
+  <section class="my-plans">
+    <h3 class="section-heading">My plans</h3>
+    <div class="plans-container">
+      <div class="section-item">
+        <img src="images/icons/web.png" alt="Web Dev Icon">
+        <h4 class="plan-title">Development</h4>
+        <p class="plan-description">I want</p>
+      </div>
+      <div class="section-item">
+        <img src="images/icons/js.png" alt="JavaScript Icon">
+        <h4 class="plan-title">JavaScript</h4>
+        <p class="plan-description">I want</p>
+      </div>
+      <div class="section-item">
+        <img src="images/icons/smoke.png" alt="No Smoking Icon">
+        <h4 class="plan-title">Smoking</h4>
+        <p class="plan-description">I end</p>
+      </div>
+      <div class="section-item">
+        <img src="images/icons/ecom.png" alt="Ecommerce Icon">
+        <h4 class="plan-title">Eccomerce</h4>
+        <p class="plan-description">I want</p>
+      </div>
+    </div>
   </section>
 
+  <!-- This is section three -->
+  <section>
+    <div class="banner-section">
+      
+    </div>
+  </section>
   </main>
 
 </body>
