added section three

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
   <main>
   
   <!-- This is section one -->
-    <section>
-      <div class="section-container">
-        <img src="images/person.png" alt="Person Image">
-        <div class="section-one-item">
-        <h3 class="section-title">My failures of previous year</h3>
-        <p class="section-sub">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, fuga soluta veniam facere, magni sunt, deserunt sint dolorem quo adipisci vel mollitia. Aliquid, iure laudantium!</p>
-        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Lorem ipsum dolor sit amet.</p>
-        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Pariatur sapiente quia ipsum dolores.</p>
-        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Falis quibusdam desunt pedis accum.</p>
-        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Excabo minima exerconem aut voate.</p>
-        <p class="section-description"><i class="fa-solid fa-circle-check"></i> Aliquam dolorum neque aperiam eius.</p>
-        </div>
+  <section>
+    <div class="section-container">
+      <img src="images/person.png" alt="Person Image">
+      <div class="section-one-item">
+      <h3 class="section-title">My failures of previous year</h3>
+      <p class="section-sub">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, fuga soluta veniam facere, magni sunt, deserunt sint dolorem quo adipisci vel mollitia. Aliquid, iure laudantium!</p>
+      <p class="section-description"><i class="fa-solid fa-circle-check"></i> Lorem ipsum dolor sit amet.</p>
+      <p class="section-description"><i class="fa-solid fa-circle-check"></i> Pariatur sapiente quia ipsum dolores.</p>
+      <p class="section-description"><i class="fa-solid fa-circle-check"></i> Falis quibusdam desunt pedis accum.</p>
+      <p class="section-description"><i class="fa-solid fa-circle-check"></i> Excabo minima exerconem aut voate.</p>
+      <p class="section-description"><i class="fa-solid fa-circle-check"></i> Aliquam dolorum neque aperiam eius.</p>
       </div>
-    </section>
+    </div>
+  </section>
 
   <!-- This is section two -->
   <section class="my-plans">
@@ -76,10 +76,17 @@
 
   <!-- This is section three -->
   <section>
-    <div class="banner-section">
-      
+    <div class="banner-container">
+      <div class="banner-text">
+        <h3 class="ban-title">Awlays keep a positive 
+        mindset</h3>
+        <p id="btn-call">
+        <input type="button" value="Call Now" class="btn-primary"/>
+        </p>
+      </div>
     </div>
   </section>
+
   </main>
 
 </body>
