--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
   <!-- This is main section -->
   <main>
-  
   <!-- This is section one -->
   <section>
     <div class="section-container">
@@ -87,6 +86,32 @@
     </div>
   </section>
 
+  <!-- This is section four -->
+  <section class="contact-container">
+    <div class="contact-ione">
+      <h3 class="contact-title">Future</h3>
+      <p class="contact-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae omnis magni ipsum quasi rem dolor, obcaecati impedit cum officia adipisci sapiente sed, vel officiis necessitatibus!</p>
+      <p class="email-adress">Email : info@gmail.com</p>
+      <p class="phone-number">Phone : 01600000000</p>
+      <a href="">
+        <img src="images/icons/fb.png" alt="Facebook Icon">
+      </a>
+      <a href="">
+        <img src="images/icons/twitter.png" alt="Twitter Icon">
+      </a>
+      <a href="">
+        <img src="images/icons/youtube.png" alt="Youtube Icon">
+      </a>
+    </div>
+    <div class="contact-itwo">
+      <h3 class="sec-title">Subscribe</h3>
+      <form action="">
+        <input type="email" name="" id="" placeholder="Your Email">
+        <p id="btn-subscribe">
+          <input type="button" value="Subscribe" class="btn-primary"/>
+      </form>
+    </div>
+  </section>
   </main>
 
 </body>
